terraform/detection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: detection
  name: detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: detection
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: detection
    spec:
      containers:
      - image: kyeongmin516/waf-detection
        name: waf-detection
        resources: {}
status: {}
