terraform/svc-detection.yaml
apiVersion: v1
kind: Service
metadata:
  name: detection-service
spec:
  selector:
    app: detection 
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
