terraform/svc-responder.yaml
apiVersion: v1
kind: Service
metadata:
  name: responder-service
spec:
  selector:
    app: responder 
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
