terraform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edos-project-ingress
  namespace: default  # 서비스들이 있는 곳
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: jenkins-service # 현재는 컨테이너로 운영 중이지만, 추후에 pod로 수정할 듯
            port:
              number: 8080
      - path: /detect
        pathType: Prefix
        backend:
          service:
            name: detection-service
            port:
              number: 5000
      - path: /respond
        pathType: Prefix
        backend:
          service:
            name: responder-service
            port:
              number: 8000
